# artiphishell

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  compare-afc-crs-shellphish.sh  deploy-to-afc-crs-shellphish.sh  pipeline.yaml
aixcc-infra/aixcc-afc-competition-api/: Dockerfile  docker-compose.yaml  pyproject.toml  run_competition_api.sh
aixcc-infra/aixcc-afc-competition-api/src/: server.py  server_base.py  server_impl.py
components/dyva/: Dockerfile  pipeline.yaml  pyproject.toml
components/dyva/.devcontainer/: devcontainer.json
components/dyva/dyva/: run.py
components/dyva/run_scripts/: run-dyva-agent-from-backup.sh  run-dyva-agent.sh  run-dyva-build-from-backup.sh  run-dyva-build.sh
components/dyva/test_rca/: .gitignore  test.py
components/grammar-guy/: .dockerignore  .gitignore  Dockerfile  README.md  pipeline.yaml  pyproject.toml  report.md  run-gg-from-backup.sh  run-gg-targeted-agent-from-backup.sh  run-gg-targeted-agent.sh  run-gg-targeted-explorer-agent-from-backup.sh  run-gg-targeted-explorer-agent.sh  run-gg-targeted-reproducer-agent-from-backup.sh  run-gg-targeted-reproducer-agent.sh  run-gg-targeted-sarif-agent-from-backup.sh  run-gg-targeted-sarif-agent.sh  run-gg.sh  test_sarif copy.sarif  test_sarif.sarif
components/grammar-guy-old/: Dockerfile  README.md  pipeline.yaml  pyproject.toml
components/grammar-guy-old/deprecated/: grammarinator_wrapper.ipynb
components/grammar-guy-old/target_building/: .env.docker  Dockerfile.grammar-guy  build_target.sh  fake-clang.sh  generic_harness.c  local_build_target.sh  response-init.txt
components/grammar-guy/.devcontainer/: devcontainer.json
components/grammar-guy/ci_tests/: libdeps.yaml  run_internal_tests.sh  run_pipeline_tests.sh
components/grammar-guy/local_run/: .gitignore  clean.sh  devcontainer-run-with-backup.sh  pipeline.yaml  restore_backup.sh  run.sh
components/grammar-guy/tools/: build.sh
components/grammaroomba/: .gitignore  Dockerfile  fix_neo4jbase  pipeline.yaml  pyproject.toml  run-backup.sh  run-roomba.sh
components/grammaroomba/.devcontainer/: devcontainer.json
components/patcherg/: Dockerfile  pipeline.yaml  pyproject.toml
components/patcherg/.devcontainer/: devcontainer.json
components/patcherg/patcherg/: __init__.py  __main__.py  utils.py
components/patcherg/scripts/: run_patcherg.sh  run_patcherg_from_backup.sh  test_neo4j.py
components/patchery/: .gitignore  Dockerfile  Dockerfile.extensions  README.md  pipeline.yaml  pyproject.toml  run_ci_tests.sh  setup.sh
components/patchery/.devcontainer/: devcontainer.json
components/patchery/ci_tests/: aixcc_tests.sh  aixcc_tests.yaml  libdeps.yaml
components/patchery/patchery/: __init__.py  __main__.py  aicc_patcher.py  deduplicator.py  logger.py  patcher.py  ranker.py  utils.py
components/patchery/patchery/data/: patch.py  (+2 more)
components/patchery/scripts/: backup_to_citests.py  backup_to_testfiles.py  run-patchery-from-backup.sh  run-patchery.sh
components/patchery/tests/: DISABLED_test_aicc.py  DISABLED_test_core.py  DISABLED_test_ossfuzz.py  common.py
components/submitter/: .dockerignore  Dockerfile  pipeline.yaml  pyproject.toml  pytest.ini  run-submitter-from-backup.sh  run_submitter.sh
components/submitter/.devcontainer/: devcontainer.json
components/submitter/ci_tests/: libdeps.yaml  test_functionality.sh
components/submitter/src/: __init__.py  submitter.py
components/submitter/tests/: README_REAL_API_TESTS.md  test_submitter.py  test_submitter_integration.py
components/syzgrammar-gen/: Dockerfile  pipeline.yaml  setup.cfg  syzlangrs
components/syzgrammar-gen/syzgrammar_gen/: agent.py  args.sc  externs.sc  joern-calls.sc  main.py
components/syzgrammar-gen/test_features/: build_and_run_pydatatask.sh  targets.csv
libs/aijon-lib/: README.md  pyproject.toml
libs/aijon-lib/aijon_lib/: __init__.py
libs/aijon-lib/tests/: test_poi.py
libs/aijon-lib/tests_data/: codeswipe_example.yaml  libpng.patch  ngx_sendfile_r.yaml
libs/analysis-graph/: pyproject.toml
libs/crs-api/: pyproject.toml
libs/crs-api/crs_api/: __init__.py  competition_api.py  crs_api_base.py  crs_api_endpoints.py  crs_api_impl.py
libs/crs-telemetry/: README.md  pyproject.toml
libs/crs-utils/: README.md  pyproject.toml  requirements.txt
libs/debug-lib/: README.md  pyproject.toml
libs/debug-lib/.devcontainer/: devcontainer.json
libs/debug-lib/debug_lib/: __init__.py
libs/graphquery/: pyproject.toml
libs/graphquery/graphquery/: __init__.py  __main__.py  graph_client.py
libs/graphquery/tests/: test.py
libs/kumu-shi/: .gitignore  Dockerfile  LICENSE  pyproject.toml  setup.sh
libs/kumu-shi/.devcontainer/: devcontainer.json
libs/kumu-shi/kumushi/: __init__.py  __main__.py  poi_cluster_ranker.py  rca_mode.py  root_cause_analyzer.py  util.py
libs/kumu-shi/tests/: common.py  test_aixcc.py  test_core.py
libs/libcodeql/: README.md  pyproject.toml
libs/nautilus/fuzzer/: Cargo.toml
libs/nautilus/grammartec/: Cargo.toml
libs/nautilus/nautilus_python/: Cargo.toml
libs/nautilus/revolver_mutator/: Cargo.toml
libs/nautilus/watchtower/: Cargo.toml
libs/permanence/: README.md  pyproject.toml
libs/syzlang-bridge/: README.md  pyproject.toml
libs/syzlang-bridge/patches/: generate_json.diff  harness_syscall.diff
libs/syzlang-bridge/syzlang_bridge/: __init__.py  syzlang.py  types.py  utils.py
libs/syzlangrs/: .gitignore  Cargo.toml  build.sh  gen_grammar.py
libs/syzlangrs/src/: lib.rs
pipelines/apis/knowledge-base/: .gitignore  Dockerfile.kb-data  docker-compose-kb-beatty.yaml  docker-compose-kb-crs.yaml  docker-compose.yaml  entrypoint.sh  neo4j.conf  pyproject.toml  rebuild-kb-data.sh  requirements.txt
pipelines/meta-components/aixcc-sc-capi/: .dockerignore  .gitignore  .tool-versions  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  env.example  pyproject.toml  standard_config.yaml
services/functionresolver_server/: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yaml  pyproject.toml
services/functionresolver_server/.devcontainer/: devcontainer.json
(+5102 files in other folders)
