[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellphish-crs-utils"
version = "0.0.1"
authors = [
        {name = "Wil Gibbs", email = "wfgibbs@asu.edu"}, 
        {name = "Lukas Dresel", email = "friend@you.com"},
        {name = "Fish", email = "fishw@asu.edu"}
    ]
description = "An RDA based static-analysis library for resolving function arguments"
readme="README.md"
requires-python=">=3.10"

dependencies = [
    "PyYaml",
    "watchdog"
]


[project.scripts]

