[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "patcherg"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
license = {text = "BSD 2 Clause"}
description = "PatcherG: a guardian for patchers"
urls = {Homepage = "https://github.com/shellphish-support-syndicate/artiphishell"}
requires-python = ">= 3.10"
dependencies = [
    "tqdm",
    "pyyaml",
    "Jinja2",
    "neo4j",
    "neomodel",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "pytest",
    "ipdb",
    "pytest-asyncio",
    "pydantic",
]
aixcc = [
    "shellphish_crs_utils"
]

[project.scripts]
patcherg = "patcherg.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "patcherg.__version__"}
