[metadata]
name = syzgrammar-gen
version =  0.0.1
url = https://github.com/shellphish-support-syndicate/syzgrammar-gen
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
description = A
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
install_requires =

python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    syzgrammar-gen = syzgrammar_gen:main
