[project]
name = "aijon_lib"
version = "0.0.1"
authors = [
        {name = "4rbit3r", email = "jvadayat@asu.edu"}, 
    ]
description = "Library for instrumenting code with IJON annotations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentlib",
    "shellphish-crs-utils",
    "jinja2>=3.1.5",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "neomodel>=5.4.5",
    "loguru",
    "unidiff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aijon_lib"]

[tool.uv.sources]
shellphish-crs-utils = { path = "../crs-utils", editable = true }
agentlib = { path = "../agentlib", editable = true }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
extend-select = ["E501"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.31.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--cov=aijon_lib"
testpaths = [
    "tests",
]
