[project]
name = "crs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-httpauth>=4.8.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "shellphish-crs-utils",
    "influxdb-client",
    "filelock",
 ]

[tool.uv.sources]
shellphish-crs-utils = { path = "../crs-utils" }

[project.scripts]
serve-crs-api = "crs_api.crs_api_endpoints:start_server"
