[package]
name = "syzlangrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.0"
num-traits = "0.2.16"
num_enum = "0.7.0"
thiserror = "1.0.49"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
