[project]
name = "functionresolver_server"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "jinja2",
    "rich",
    "requests",
    "GitPython",
    "fastapi[standard]",
    "jq"
]

[project.scripts]
functionresolver-server = "functionresolver_server.server:functionresolver_server_cli"
