[package]
name = "grammartec"
version = "0.1.0"
authors = ["coco <coco@hexgolems.com>"]
edition = "2015"

[dependencies]
nix = { version = "0.27", features = ["process", "signal", "resource"] }
libafl = { version = "0.14.1", features = ["std"] }
libafl_bolts = "0.14.1"
regex = "1.3.7"
lazy_static= "1.4.0"
rand = "0.8.5"
hash_by_ref = "0.1.0"
forksrv = {path = "../forksrv"}
regex_mutator = {path = "../regex_mutator"}
regex-syntax = "0.6.17"
serde_derive = "1.0"
serde = "1.0"
loaded_dice = "0.2.2"
num = "0.2.1"
pyo3="0.21.1"
pyo3-ffi = "0.21.1"
log = "0.4"
env_logger = "0.10"
