[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledgebase/"]

[project]
name = "knowledgebase"
version = "0.1.0"
requires-python = ">= 3.8"

[project.scripts]
kb_import_repo = "knowledgebase.peripherals.import_repo:main"
kb_import_cves = "knowledgebase.peripherals.import_cves:main"
kb_import_r3x_build_status = "knowledgebase.peripherals.import_r3x_build_status:main"
kb_import_jenkins_tests = "knowledgebase.peripherals.import_jenkins_tests:main"

kb_prepare_kernelcves_dataset = "knowledgebase.peripherals.prepare_kernelcves_dataset:main"
kb_prepare_syzcoverage = "knowledgebase.peripherals.prepare_syzcoverage:main"
kb_update_syzbot = "knowledgebase.peripherals.update_syzbot_dataset:main"

kb_update_embeddings = "knowledgebase.peripherals.update_embeddings:main"


kb_populate_for_retrieval = "knowledgebase.peripherals.populate_for_retrieval:main"
kb_populate_test_embeddings = "knowledgebase.peripherals.populate_test_embeddings:main"
kb_populate_ossfuzz_dataset = "knowledgebase.peripherals.populate_ossfuzz_dataset:main"
kb_get_benign_syzprogs = "knowledgebase.peripherals.get_benign_syzprogs:main"

kb_retrieval_api = "knowledgebase.apis.retrieval_api:main"
kb_schema_api = "knowledgebase.apis.schema_api:main"
kb_llm_api = "knowledgebase.apis.llm_api:main"


kb_diff_dataset = "knowledgebase.diff_ranker.create_dataset:main"